--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "file-uploader",
+  "name": "web3-crowdfund",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -31,7 +31,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@solana/web3.js": "^1.95.3",
-    "@t3-oss/env-nextjs": "^0.11.0",
+    "@t3-oss/env-nextjs": "latest",
     "@uploadthing/react": "^6.4.1",
     "@upstash/ratelimit": "^2.0.0",
     "@upstash/redis": "^1.30.1",
