--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "noEmit": true,
     "module": "ESNext",
-    "moduleResolution": "node",
+    "moduleResolution": "node16",
     "jsx": "preserve",
     "plugins": [{ "name": "next" }],
     "incremental": true,
